Create clojure and scala versions of example scripts